# ini

./: Makefile.am  Makefile.in  README.mkd  config.h.in  configure  configure.ac
autom4te.cache/: output.0  requests  traces.0  traces.1
debian/: changelog  control  copyright  rules
doc/: Makefile.am  Makefile.in  ini.1.mkd
pkg-config/: iniparser.pc
src/: Makefile.am  Makefile.in  ini.c
